// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.terminal.v1;

import "google/protobuf/timestamp.proto";
import "prehog/v1alpha/connect.proto";

option go_package = "github.com/gravitational/teleport/lib/teleterm/v1";

message ReportEventRequest {
  string distinct_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string auth_cluster_id = 3;
  oneof event {
    prehog.v1alpha.ConnectLoginEvent connect_login = 4;
    prehog.v1alpha.ConnectProtocolRunEvent connect_protocol_run = 5;
    prehog.v1alpha.ConnectAccessRequestCreateEvent connect_access_request_create = 6;
    prehog.v1alpha.ConnectAccessRequestReviewEvent connect_access_request_review = 7;
    prehog.v1alpha.ConnectAccessRequestAssumeRoleEvent connect_access_request_assume_role = 8;
    prehog.v1alpha.ConnectFileTransferRunEvent connect_file_transfer_run_event = 9;
    prehog.v1alpha.ConnectUserJobRoleUpdateEvent connect_user_job_role_update_event = 10;
  }
}

message EventReportedResponse {}
